# 3drenderer

./: CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  Camera.cpp  Camera.h  Clipping.cpp  Clipping.h  Constants.hpp  Graphics.cpp  Graphics.h  Gui.cpp  Gui.h  Light.cpp  Light.h  Main.cpp  Mat4.cpp  Mat4.h  Math.hpp  Mesh.cpp  Mesh.h  MeshData.hpp  ObjParser.cpp  ObjParser.h  Renderer.cpp  Renderer.h  Settings.hpp  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Triangle.hpp  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/Constants/: CMakeLists.txt
src/Main/: CMakeLists.txt  Main.cpp
src/Math/: CMakeLists.txt
src/Math/Math/: Vec3.cpp  Vec3.h
src/Renderer/: CMakeLists.txt
src/Renderer/Renderer/: Renderer.cpp  Renderer.h
